feat(activity): 增加创建活动的接口
