# repository/db/model/activity.go
@@ -9,18 +9,15 @@ import (
 type Activity struct {
 	gorm.Model
 
-	Title        string
-	Introduction string `gorm:"size:1000"`
-	Status       int
-
-	User   User `gorm:"ForeignKey:UserID"`
-	UserId uint
-
-	StartTime time.Time
-	EndTime   time.Time
-
-	Location Point `gorm:"type:point"`
-
+	Title          string
+	Introduction   string `gorm:"size:1000"`
+	Status         int
+	StartTime      time.Time
+	EndTime        time.Time
+	Location       Point `gorm:"type:point"`
 	ExpectedNumber uint
 	CurrentNumber  uint
+	UserId         uint
+	UserName       string
+	UserAvatar     string
 }
